# MiaBot

./: README.md
go-cqhttp-linux/: config.yml  device.json
miabot/: .env  README.md  pyproject.toml
miabot/src/plugins/nonebot_plugin_l4d2_server/: config.py  utils.py
