[project]
name = "miabot"
version = "0.1.0"
description = "miabot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "mirai2", module_name = "nonebot.adapters.mirai2" }
]
plugins = ["nonebot_plugin_cocdicer"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
